create index structure with div and placeholders

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" >
-    <title>My first web page</title>
+
+<head>
+    <meta charset="utf-8">
+    <title>Mezekr - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <p>Welcome to my first webpage.</p>
-  </body>
+</head>
+<body>
+    <!-- This the header part-->
+    <div>
+        <img src="https://placehold.co/250x60/png" alt="My logo placehold">
+        <div>
+            <a href="index.html">Home</a> 
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+
+        </div>
+    </div>
+
+    <!-- This the main part-->
+    <div>
+        <img src="https://placehold.co/200x200/png" alt="My photograph">
+    </div>
+    <div>
+        <h1>Hello World!</h1>
+        <p>My name is Mezekr W.</p>
+        <p> I am <span>Web</span> developer</p>
+        <a href="#">Check out some of my code</a>
+    </div>
+    <!-- This the footer part-->
+    <div>
+        <p>Follo me </p>
+        <div>
+            <img src="https://placehold.co/30x40/png" alt="">
+            <img src="https://placehold.co/30x40/png" alt="">
+            <img src="https://placehold.co/30x40/png" alt="">
+        </div>
+    </div>
+
+</body>
+
 </html>
