--- a/about.html
+++ b/about.html
@@ -6,6 +6,15 @@
         <link rel="short icon" href="img/favicon-32x32.png" type="image/x-icon">
     </head>
     <body>
-        here is about me!
+        <!-- This the header part-->
+    <div>
+        <img src="https://placehold.co/250x60/png" alt="My logo placehold">
+        <div>
+            <a href="index.html">Home</a> 
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <h1>Here is my about me!</h1>
+    </div>
     </body>
 </html>
