add header, main, footer html5 tags to index page

--- a/index.html
+++ b/index.html
@@ -3,40 +3,41 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Mezekr - Portfolio</title>
+    <title>Mezekr W. - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
 <body>
     <!-- This the header part-->
-    <div>
+    <header>
         <img src="https://placehold.co/250x60/png" alt="My logo placehold">
-        <div>
+        <nav>
             <a href="index.html">Home</a> 
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
-
-        </div>
-    </div>
+        </nav>
+    </header>
 
     <!-- This the main part-->
-    <div>
-        <img src="https://placehold.co/200x200/png" alt="My photograph">
-    </div>
-    <div>
-        <h1>Hello World!</h1>
-        <p>My name is Mezekr W.</p>
-        <p> I am <span>Web</span> developer</p>
-        <a href="#">Check out some of my code</a>
-    </div>
+    <main>
+        <div>
+            <img src="https://placehold.co/200x200/png" alt="My photograph">
+        </div>
+        <div>
+            <h1>Hello World!</h1>
+            <p>My name is Mezekr W.</p>
+            <p> I am <span>Web</span> developer</p>
+            <a href="#">Check out some of my code</a>
+        </div>
+    </main>
     <!-- This the footer part-->
-    <div>
+    <footer>
         <p>Follo me </p>
         <div>
             <img src="https://placehold.co/30x40/png" alt="">
             <img src="https://placehold.co/30x40/png" alt="">
             <img src="https://placehold.co/30x40/png" alt="">
         </div>
-    </div>
+    </footer>
 
 </body>
 
