--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>about me</title>
@@ -7,14 +7,26 @@
     </head>
     <body>
          <!-- This the header part-->
-    <div>
-        <img src="https://placehold.co/250x60/png" alt="My logo placehold">
-        <div>
-            <a href="index.html">Home</a> 
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </div>
-        <h1>Here is my Contact!</h1>
-    </div>
+        <header>
+            <img src="https://placehold.co/250x60/png" alt="My logo placehold">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+            <h1>Here is my Contact!</h1>
+        </header>
+        <main>
+            This is main section
+        </main>
+
+        <footer>
+            <p>Follo me </p>
+            <div>
+                <img src="https://placehold.co/30x40/png" alt="">
+                <img src="https://placehold.co/30x40/png" alt="">
+                <img src="https://placehold.co/30x40/png" alt="">
+            </div>
+        </footer>
     </body>
 </html>
