add contact details to contact page

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,15 @@
             <h1>Here is my Contact!</h1>
         </header>
         <main>
-            This is main section
+            <div>
+                Mezekr w. <br>
+                Examplestraße 01 <br>
+                09xxx Freiberg <br>
+                Deutschland <br>
+                <br>
+                Tel <a href="tel:+491521615243">+491521615243</a> <br>
+                Email <a href="mailto:examplamail@tuta.com">examplamail@tuta.com</a>
+            </div>
         </main>
 
         <footer>
