add  call-to-action link

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,9 @@
                 09xxx Freiberg <br>
                 Deutschland <br>
                 <br>
-                Tel <a href="tel:+491521615243">+491521615243</a> <br>
-                Email <a href="mailto:examplamail@tuta.com">examplamail@tuta.com</a>
+                Tel: <a href="tel:+491521615243">+491521615243</a> <br>
+                Email: <a href="mailto:examplamail@tuta.com">examplamail@tuta.com</a> <br>
+                <a href="mailto:examplamail@tuta.com">Contact me</a>
             </div>
         </main>
 
