--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
     <footer>
         <p>Follo me </p>
         <div>
-            <img src="https://placehold.co/30x40/png" alt="">
-            <img src="https://placehold.co/30x40/png" alt="">
-            <img src="https://placehold.co/30x40/png" alt="">
+            <img src="img/github_icon.svg" alt="github icon">
+            <img src="img/linkedin_icon.svg" alt=" linkedin icon">
         </div>
     </footer>
 
