add content to about page

--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <title>about me</title>
         <link rel="short icon" href="img/favicon-32x32.png" type="image/x-icon">
     </head>
+
     <body>
         <!-- This the header part-->
         <header>
@@ -15,18 +17,24 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
-
-            <h1>Here is my about me!</h1>
-
         <main>
-            This is main section
+            <h1>About Me</h1>
+            <div>
+                <p>
+                    I'am a web developer living in Germany. I am passionate
+                    about all new and cool web stuff. <br>
+                    I lone to learn about new web technologies and playing
+                    aswell as watching football
+                </p>
+            </div>
         </main>
         <footer>
-            <p>Follo me </p>
+            <p>Follo me</p>
             <div>
                 <img src="img/github_icon.svg" alt="github icon">
                 <img src="img/linkedin_icon.svg" alt=" linkedin icon">
             </div>
         </footer>
     </body>
+
 </html>
