--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <body>
          <!-- This the header part-->
         <header>
-            <img src="https://placehold.co/250x60/png" alt="My logo placehold">
+            <img src="img/logo-202x48.png" alt="My logo ">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
