add link to the social media icons

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <h1>About Me</h1>
             <div>
                 <p>
-                    I'am a web developer living in Germany. I am passionate
+                    I'am a web developer from Eritrea living in Germany. I am passionate
                     about all new and cool web stuff. <br>
                     I lone to learn about new web technologies and playing
                     aswell as watching football
@@ -29,10 +29,14 @@
             </div>
         </main>
         <footer>
-            <p>Follo me</p>
+            <p>Follo me </p>
             <div>
-                <img src="img/github_icon.svg" alt="github icon">
-                <img src="img/linkedin_icon.svg" alt=" linkedin icon">
+                <a href="https://github.com/"  target="_blank">
+                    <img src="img/github_icon.svg" alt="github icon">
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <img src="img/linkedin_icon.svg" alt="linked icon">
+                </a>
             </div>
         </footer>
     </body>
