--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- This the main part-->
     <main>
         <div>
-            <img src="https://placehold.co/200x200/png" alt="My photograph">
+            <img src="img/example-profile_photo-165x200.jpg " alt="My photograph">
         </div>
         <div>
             <h1>Hello World!</h1>
@@ -33,8 +33,12 @@
     <footer>
         <p>Follo me </p>
         <div>
-            <img src="img/github_icon.svg" alt="github icon">
-            <img src="img/linkedin_icon.svg" alt=" linkedin icon">
+            <a href="https://github.com/"  target="_blank">
+                <img src="img/github_icon.svg" alt="github icon">
+            </a>
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img src="img/linkedin_icon.svg" alt="linked icon">
+            </a>
         </div>
     </footer>
 
