--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,12 @@
         <footer>
             <p>Follo me </p>
             <div>
-                <img src="img/github_icon.svg" alt="github icon">
-                <img src="img/linkedin_icon.svg" alt=" linkedin icon">
+                <a href="https://github.com/"  target="_blank">
+                    <img src="img/github_icon.svg" alt="github icon">
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <img src="img/linkedin_icon.svg" alt="linked icon">
+                </a>
             </div>
         </footer>
     </body>
