refoctor index page - add viewpoint - add role to nav and a tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mezekr W. - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
@@ -10,10 +11,10 @@
     <!-- This the header part-->
     <header>
         <img src="img/logo-202x48.png" alt="My logo ">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+        <nav role="menubar">
+            <a href="index.html" role="menuitem">Home</a>
+            <a href="about.html" role="menuitem">About</a>
+            <a href="contact.html" role="menuitem">Contact</a>
         </nav>
     </header>
 
