add table and more conten about

--- a/about.html
+++ b/about.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>about me</title>
         <link rel="short icon" href="img/favicon-32x32.png" type="image/x-icon">
+        <style>
+            table,thead, tbody,tfoot, th, td {
+                border: 1px solid #dddddd;
+                border-collapse: collapse;
+               text-align: center;
+            }
+        </style>
     </head>
-
     <body>
         <!-- This the header part-->
         <header>
@@ -24,9 +30,58 @@
                     I'am a web developer from Eritrea living in Germany. I am passionate
                     about all new and cool web stuff. <br>
                     I lone to learn about new web technologies and playing
-                    aswell as watching football
+                    aswell as watching football.
                 </p>
             </div>
+            <h2>Here are more about me.</h2>
+            <p>There are things I like to do</p>
+            <ul>
+                <li>Fontend Developement</li>
+                <li>Backend Developement</li>
+                <li>Code writing/programming </li>
+                <li>Play and watch football.</li>
+            </ul>
+            <h2>My path to became a web developer</h2>
+            <ul>
+                <li>First step</li>
+                <li>second step</li>
+                <li>Third step </li>
+                <li>CarerFoundry web developent course</li>
+            </ul>
+
+            <table>
+                <caption>My Web developent Skills and Expriences </caption>
+                <thead>
+                    <tr>
+                        <th scope="col">Skills</th>
+                        <th scope="col">Years of Exerience</th>
+                        <th scope="col">Level of Expertise</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> HTMl</td>
+                        <td>1</td>
+                        <td>Intermidate</td>
+                    </tr>
+                    <tr>
+                        <td>CSS</td>
+                        <td>1</td>
+                        <td>Intermidate</td>
+                    </tr>
+                    <tr>
+                        <td>Javascript</td>
+                        <td> 1</td>
+                        <td>beginner</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">I learning more..</td>
+                    </tr>
+                </tfoot>
+
+            </table>
         </main>
         <footer>
             <p>Follo me </p>
