update img alt properity of the logo

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <body>
         <!-- This the header part-->
         <header>
-            <img src="img/logo-202x48.png" alt="My logo ">
+            <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name ">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
