--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- This the header part-->
     <header>
-        <img src="img/logo-202x48.png" alt="My logo ">
+        <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name">
         <nav role="menubar">
             <a href="index.html" role="menuitem">Home</a>
             <a href="about.html" role="menuitem">About</a>
