change "about" with "about me" for  accessiblity

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
             <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name ">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="about.html">About me</a>
                 <a href="contact.html">Contact</a>
             </nav>
             <h1>Here is my Contact!</h1>
@@ -24,7 +24,7 @@
                 Examplestraße 01 <br>
                 09xxx Freiberg <br>
                 Deutschland <br>
-                Tel: <a href="tel:+491521615243">+491521615243</a> <br>
+                Telephone number: <a href="tel:+49-152-1615243">+491521615243</a> <br>
                 Email: <a
                     href="mailto:examplamail@tuta.com">examplamail@tuta.com</a>
                 <br>
@@ -74,6 +74,7 @@
                 </a>
             </div>
         </footer>
+    <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
