--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
     <title>Mezekr W. - Portfolio</title>
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
 </head>
-<body>
-    <!-- This the header part-->
-    <header>
-        <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name">
-        <nav role="menubar">
-            <a href="index.html" role="menuitem">Home</a>
-            <a href="about.html" role="menuitem">About</a>
-            <a href="contact.html" role="menuitem">Contact</a>
-        </nav>
-    </header>
+    <body>
+        <!-- This the header part-->
+        <header>
+            <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name">
+            <nav role="menubar">
+                <a href="index.html" role="menuitem">Home</a>
+                <a href="about.html" role="menuitem">About me</a>
+                <a href="contact.html" role="menuitem">Contact</a>
+            </nav>
+        </header>
 
-    <!-- This the main part-->
-    <main>
-        <div>
-            <img src="img/example-profile_photo-165x200.jpg " alt="My photograph">
-        </div>
-        <div>
-            <h1>Hello World!</h1>
-            <p>My name is Mezekr W.</p>
-            <p> I am <span>Web</span> developer</p>
-            <a href="#">Check out some of my code</a>
-        </div>
-    </main>
-    <!-- This the footer part-->
-    <footer>
-        <p>Follo me </p>
-        <div>
-            <a href="https://github.com/"  target="_blank">
-                <img src="img/github_icon.svg" alt="github icon">
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank">
-                <img src="img/linkedin_icon.svg" alt="linked icon">
-            </a>
-        </div>
-    </footer>
-
-</body>
+        <!-- This the main part-->
+        <main>
+            <div>
+                <img src="img/example-profile_photo-165x200.jpg " alt="My photograph">
+            </div>
+            <div>
+                <h1>Hello World!</h1>
+                <p>My name is Mezekr W.</p>
+                <p> I am <span>Web</span> developer</p>
+                <a href="#">Check out some of my code</a>
+            </div>
+        </main>
+        <!-- This the footer part-->
+        <footer>
+            <p>Follo me </p>
+            <div>
+                <a href="https://github.com/"  target="_blank">
+                    <img src="img/github_icon.svg" alt="github icon">
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <img src="img/linkedin_icon.svg" alt="linked icon">
+                </a>
+            </div>
+        </footer>
+        <script src="js/tota11y.min.js"></script>
+    </body>
 
 </html>
