--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name ">
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="about.html">About me</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </header>
@@ -94,6 +94,7 @@
                 </a>
             </div>
         </footer>
+    <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
