--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mezekr W. - Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mezekr W. - Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
+    </head>
+
     <body>
         <!-- This the header part-->
         <header>
-            <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name">
+            <img src="img/logo-202x48.png"
+                alt="Personal logo of Mezekr, a text logo with my name">
             <nav role="menubar">
                 <a href="index.html" role="menuitem">Home</a>
                 <a href="about.html" role="menuitem">About me</a>
@@ -21,7 +23,8 @@
         <!-- This the main part-->
         <main>
             <div>
-                <img src="img/example-profile_photo-165x200.jpg " alt="My photograph">
+                <img src="img/example-profile_photo-165x200.jpg "
+                    alt="My photograph">
             </div>
             <div>
                 <h1>Hello World!</h1>
@@ -34,7 +37,7 @@
         <footer>
             <p>Follo me </p>
             <div>
-                <a href="https://github.com/"  target="_blank">
+                <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
                 </a>
                 <a href="https://www.linkedin.com/" target="_blank">
