--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>about me</title>
         <link rel="short icon" href="img/favicon-32x32.png" type="image/x-icon">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
+
     <body>
         <!-- This the header part-->
         <header>
-            <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name ">
+            <img src="img/logo-202x48.png"
+                alt="Personal logo of Mezekr, a text logo with my name ">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About me</a>
@@ -24,7 +27,8 @@
                 Examplestraße 01 <br>
                 09xxx Freiberg <br>
                 Deutschland <br>
-                Telephone number: <a href="tel:+49-152-1615243">+491521615243</a> <br>
+                Telephone number: <a
+                    href="tel:+49-152-1615243">+491521615243</a> <br>
                 Email: <a
                     href="mailto:examplamail@tuta.com">examplamail@tuta.com</a>
                 <br>
@@ -32,34 +36,41 @@
             </div>
             <h1> Subscribe to my new newsletter </h1>
             <form action="/user-registration-form.html" method="post">
-              <fieldset>
-                <legend> Personal Data </legend>
-                <label for="firstname">Enter your First name:
-                    <input type="text" id="firstname" name="firstname" required> <br>
-                </label>
-                <br>
-                <label for="lastname">Enter your Last name:
-                    <input type="text" id="lastname" name="lastname" required> <br>
-                </label>
-                <br>
-                <label for="age">Enter your your Age:
-                    <input type="number" id="age" name="age" required min="13"><br>
-                </label>
-                <br>
-                <label for="phone-number">Enter your phone number:
-                    <input type="tel" id="phone-number" name="phone-number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
-                </label>
-                <br>
-                <label for="email">Enter your email:
-                    <input type="email" id="email" name="email" required> <br>
-                </label>
-                <br>
-                <label for="comment">Leave a Comment
-                    <textarea id="comment" name="comment" rows="5" cols="20"></textarea> <br>
-                </label>
-                <br>
-                <button type="submit" name="submit" value="Submit"> Submit </button><br>
-              </fieldset>
+                <fieldset>
+                    <legend> Personal Data </legend>
+                    <label for="firstname">Enter your First name:
+                        <input type="text" id="firstname" name="firstname"
+                            required> <br>
+                    </label>
+                    <br>
+                    <label for="lastname">Enter your Last name:
+                        <input type="text" id="lastname" name="lastname"
+                            required> <br>
+                    </label>
+                    <br>
+                    <label for="age">Enter your your Age:
+                        <input type="number" id="age" name="age" required
+                            min="13"><br>
+                    </label>
+                    <br>
+                    <label for="phone-number">Enter your phone number:
+                        <input type="tel" id="phone-number" name="phone-number"
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><br>
+                    </label>
+                    <br>
+                    <label for="email">Enter your email:
+                        <input type="email" id="email" name="email" required>
+                        <br>
+                    </label>
+                    <br>
+                    <label for="comment">Leave a Comment
+                        <textarea id="comment" name="comment" rows="5"
+                            cols="20"></textarea> <br>
+                    </label>
+                    <br>
+                    <button type="submit" name="submit" value="Submit"> Submit
+                    </button><br>
+                </fieldset>
             </form>
         </main>
 
@@ -74,7 +85,7 @@
                 </a>
             </div>
         </footer>
-    <script src="js/tota11y.min.js"></script>
+        <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
