--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mezekr W. - Portfolio</title>
         <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
