refactor anout page

--- a/about.html
+++ b/about.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>about me</title>
         <link rel="short icon" href="img/favicon-32x32.png" type="image/x-icon">
         <style>
-            table,thead, tbody,tfoot, th, td {
+            table,
+            thead,
+            tbody,
+            tfoot,
+            th,
+            td {
                 border: 1px solid #dddddd;
                 border-collapse: collapse;
-               text-align: center;
+                text-align: center;
             }
         </style>
     </head>
+
     <body>
         <!-- This the header part-->
         <header>
-            <img src="img/logo-202x48.png" alt="Personal logo of Mezekr, a text logo with my name ">
+            <img src="img/logo-202x48.png"
+                alt="Personal logo of Mezekr, a text logo with my name ">
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About me</a>
@@ -27,7 +35,8 @@
             <h1>About Me</h1>
             <div>
                 <p>
-                    I'am a web developer from Eritrea living in Germany. I am passionate
+                    I'am a web developer from Eritrea living in Germany. I am
+                    passionate
                     about all new and cool web stuff. <br>
                     I lone to learn about new web technologies and playing
                     aswell as watching football.
@@ -86,7 +95,7 @@
         <footer>
             <p>Follo me </p>
             <div>
-                <a href="https://github.com/"  target="_blank">
+                <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
                 </a>
                 <a href="https://www.linkedin.com/" target="_blank">
@@ -94,7 +103,7 @@
                 </a>
             </div>
         </footer>
-    <script src="js/tota11y.min.js"></script>
+        <script src="js/tota11y.min.js"></script>
     </body>
 
 </html>
