correct spelling mistakes

--- a/index.html
+++ b/index.html
@@ -38,12 +38,17 @@
                 <h1>Hello World!</h1>
                 <p>My name is Mezekr W.</p>
                 <p> I am <span>Web</span> developer</p>
-                <a href="#">Check out some of my code</a>
+                <a href="https://github.com/" target="_blank">Check out some of
+                    my code</a>
             </div>
+
+            <!-- This is just example button -->
+            <button type="button" href="about.html"> Example Button</button>
         </main>
+
         <!-- This the footer part-->
         <footer>
-            <p>Follo me </p>
+            <p>Follow me </p>
             <div>
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
