correct spelling mistakes

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
             </table>
         </main>
         <footer>
-            <p>Follo me </p>
+            <p>Follow me </p>
             <div>
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
