correct spelling mistakes

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         </main>
 
         <footer>
-            <p>Follo me </p>
+            <p>Follow me </p>
             <div>
                 <a href="https://github.com/" target="_blank">
                     <img src="img/github_icon.svg" alt="github icon">
