refactor navigatation and it items link

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,23 @@
         <!-- This the header part-->
         <header>
             <img src="img/logo-202x48.png"
-                alt="Personal logo of Mezekr, a text logo with my name ">
+                alt="Personal logo of Mezekr, a text logo with my name">
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About me</a>
-                <a href="contact.html">Contact</a>
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem"
+                            class="navigation-list_item navigation-list_item--active">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem"
+                            class="navigation-list_item">About me</a>
+                    </li>
+                    <li role="presentation"><a href="contact.html"
+                            role="menuitem"
+                            class="navigation-list_item">Contact</a>
+                    </li>
+                </ul>
             </nav>
-            <h1>Here is my Contact!</h1>
         </header>
         <main>
             <div>
