--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
         <header>
             <img src="img/logo-202x48.png"
                 alt="Personal logo of Mezekr, a text logo with my name">
-            <nav role="menubar">
-                <a href="index.html" role="menuitem">Home</a>
-                <a href="about.html" role="menuitem">About me</a>
-                <a href="contact.html" role="menuitem">Contact</a>
+            <nav>
+                <ul role="menubar" class="navigation-list">
+                    <li role="presentation">
+                        <a href="index.html" role="menuitem"
+                            class="navigation-list_item navigation-list_item--active">Home</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="about.html" role="menuitem"
+                            class="navigation-list_item">About me</a>
+                    </li>
+                    <li role="presentation"><a href="contact.html"
+                            role="menuitem"
+                            class="navigation-list_item">Contact</a>
+                    </li>
+                </ul>
             </nav>
         </header>
 
