add gird section in work page

--- a/work.html
+++ b/work.html
@@ -45,7 +45,12 @@
         </header>
 
         <!-- This the main part-->
-
+        <section>
+            <h1>Work</h1>
+            <dir class="grid-layout">
+                <p> Here goes the grid-layout</p>
+            </dir>
+        </section>
 
         <!-- This the footer part-->
         <footer class="page-footer">
