add grid items to the layout

--- a/work.html
+++ b/work.html
@@ -47,8 +47,48 @@
         <!-- This the main part-->
         <section>
             <h1>Work</h1>
+            <p>Here are some of the projects I have completed and am currently
+                working on.</p>
             <dir class="grid-layout">
-                <p> Here goes the grid-layout</p>
+
+                <div class="grid-layout_item">
+                    <h2>Project one</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+
+                <div class="grid-layout_item">
+                    <h2>Project two</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+                <div class="grid-layout_item">
+                    <h2>Project three</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+                <div class="grid-layout_item">
+                    <h2>Project four</h2>
+                    <p>
+                        As I web Developement student, I applied Html, css ,what
+                        I have so far learned to create this first reponsive
+                        website
+                    </p>
+                    <a href="#"> See project on Github</a>
+                </div>
+
             </dir>
         </section>
 
